--- a/index.html
+++ b/index.html
@@ -1,132 +1,268 @@
+<!--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+<title>Konstructs a Blogging Category Flat Bootstarp  Responsive Web Template | Home :: w3layouts</title>
+<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<!-- Custom Theme files -->
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<!-- Custom Theme files -->
+<script src="js/jquery.min.js"></script>
+<!-- Custom Theme files -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Konstructs Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+</head>
+<body>
+	<!-- header-section-starts -->
+	<div class="header">
+		<div class="container">
+			<div class="logo">
+				<a href="index.html"><h1>konstructs</h1></a>
+			</div>
+			<div class="pages">
+				<ul>
+					<li><a class="active" href="index.html">Articles</a></li>
+					<li><a href="3dprinting.html">3D Printers</a></li>
+					<li><a href="404.html">Tutorials</a></li>
+				</ul>
+			</div>
+			<div class="navigation">
+				<ul>
+					<li><a href="contact.html">Advertise</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a class="active" href="contact.html">Contact Us</a></li>
+				</ul>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="header-bottom">
+            <div class="type">
+				<h5>Article Types</h5>
+			</div>
+			<span class="menu"></span>
+			<div class="list-nav">
+				<ul>                                                                 
+					<li><a href="3dprinting.html">3D Printing</a></li>|
+					<li><a href="materials.html">Materials</a></li>|
+					<li><a href="printing.html">Printing</a></li>|
+					<li><a href="filestoprint.html">Files to Print</a></li>|
+					<li><a href="404.html">Videos</a></li>|
+					<li><a href="about.html">About</a></li>
+				</ul>
+			</div>
+			<!-- script for menu -->
+				<script>
+				$( "span.menu" ).click(function() {
+				  $( ".list-nav" ).slideToggle( "slow", function() {
+				    // Animation complete.
+				  });
+				});
+			</script>
+			<!-- script for menu -->
 
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>AI-Electronics</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/portfolio-item.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">AI-Electronics</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+			<div class="clearfix"></div>
         </div>
-      </div>
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-
-      <!-- Portfolio Item Heading -->
-      <h1 class="my-4">Page Heading
-        <small>Secondary Text</small>
-      </h1>
-
-      <!-- Portfolio Item Row -->
-      <div class="row">
-
-        <div class="col-md-8">
-          <img class="img-fluid" src="img/jam_sholat1.jpg" alt="">
-        </div>
-
-        <div class="col-md-4">
-          <h3 class="my-3">Project Description</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-          <h3 class="my-3">Project Details</h3>
-          <ul>
-            <li>Lorem Ipsum</li>
-            <li>Dolor Sit Amet</li>
-            <li>Consectetur</li>
-            <li>Adipiscing Elit</li>
-          </ul>
-        </div>
-
-      </div>
-      <!-- /.row -->
-
-      <!-- Related Projects Row -->
-      <h3 class="my-4">Related Projects</h3>
-
-      <div class="row">
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Ismail Rifqi Pratama</p>
-		<p class="m-0 text-center text-white">arief.ismailrifqi@gmail.com</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-  </body>
-
+	</div>
+	<div class="container">
+		<div class="content">
+			<div class="col-md-7 content-left">
+				<div class="article">
+					<h5 class="head">in recent news</h5>
+					<h6>Software </h6>
+					<a class="title" href="single.html">DeltaMaker – The new kid on the block An Elegant 3D Printer and a new wicked ass thing</a>
+					<a href="single.html"><img src="images/a1.jpg" alt="" /></a>
+					<p>Products were inspired by Behance's research of especially productive teams in the creative industry. Hundreds of individuals and teams were interviewed, and Behance chronicled the work habits and best practices of creative leaders. </p>
+					<p>The paper products were initially designed by and for the Behance team as a way to stay organized. In 2007, at the insistence of friends who wanted Action Pads of their own...</p>
+				</div>
+				<div class="article">
+					<h6>Printers</h6>
+					<a class="title" href="single.html">Nokia offering customers printable STL phone cases for the Lumia 820 and things </a>
+					<a href="single.html"><img src="images/a2.jpg" alt="" /></a>
+					<p>This week Nokia announced it is giving away files for printable case for it’s new Lumia 820 range. This week Nokia a files for printable case for it’s new Lumia 820 range. This week Nokia announced it is giving away files for printable case for it’s new Lumia 820 range. This week Nokia announced it is giving away files for printable case for it’s new Lumia 820 range. </p>
+				</div>
+			</div>
+			<div class="col-md-5 content-right">
+			<div class="content-right-top">
+				<h5 class="head">Popular</h5>	
+				<a href="single.html">
+					<div class="editor text-center">
+						<h3>DeltaMaker – The new kid on the block An Elegant 3D Printer</h3>
+						<p>A new cheap ass 3D Printer worth checking out</p>
+						<label>2 Days Ago</label>
+						<span></span>
+					</div>
+				</a>
+				<a class="active" href="single.html">
+					<div class="editor text-center">
+						<h3>Software Review: Autodesk Inventor Fusion for Mac</h3>
+						<p>3D Printing, 3D Software</p>
+						<label>3 Days Ago</label>
+						<span></span>
+					</div>
+				</a>
+				<a href="single.html">
+					<div class="editor text-center">
+						<h3>DeltaMaker – The new kid on the block An Elegant 3D Printer</h3>
+						<p>A new cheap ass 3D Printer worth checking out</p>
+						<label>2 Days Ago</label>
+						<span></span>
+					</div>
+				</a>
+				<a href="single.html">
+					<div class="editor text-center">
+						<h3>Software Review: Autodesk Inventor Fusion for Mac</h3>
+						<p>3D Printing, 3D Software</p>
+						<label>3 Days Ago</label>
+						<span></span>
+					</div>
+				</a>
+				</div>
+				<div class="editors-pic-grids">
+					<h5>Editors Pick</h5>
+					<div class="editors-pic">
+						<div class="e-pic">
+							<a href="single.html"><img src="images/ep1.jpg" alt="" /></a>
+						</div>
+						<div class="e-pic-info">
+							<a href="single.html">MarkerBot Announces the ‘Replicator 2x’  For the Experimental</a>
+							<span></span>
+							<label>2 Days Ago</label>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="editors-pic">
+						<div class="e-pic">
+							<a href="single.html"><img src="images/ep2.jpg" alt="" /></a>
+						</div>
+						<div class="e-pic-info">
+							<a href="single.html">3D Printed Record – the next revolution?</a>
+							<span></span>
+							<label>2 Days Ago</label>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="editors-pic">
+						<div class="e-pic">
+							<a href="single.html"><img src="images/ep3.jpg" alt="" /></a>
+						</div>
+						<div class="e-pic-info">
+							<a href="single.html">MarkerBot Announces the ‘Replicator 2x’  For the Experimental</a>
+							<span></span>
+							<label>2 Days Ago</label>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="editors-pic">
+						<div class="e-pic">
+							<a href="single.html"><img src="images/ep4.jpg" alt="" /></a>
+						</div>
+						<div class="e-pic-info">
+							<a href="single.html">3D Printed Record – the next revolution?</a>
+							<span></span>
+							<label>2 Days Ago</label>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+			<div class="features">
+				<h5>Featured news</h5>
+				<h2>Nokia offering customers printable STL phone cases for the Lumia 820</h2>
+			</div>
+		<div class="col-md-7 content-left">
+				<div class="article">
+					<h5 class="head">in recent news</h5>
+					<h6>Software </h6>
+					<a class="title" href="single.html">DeltaMaker – The new kid on the block An Elegant 3D Printer and a new wicked ass thing</a>
+					<a href="single.html"><img src="images/a1.jpg" alt="" /></a>
+					<p>Products were inspired by Behance's research of especially productive teams in the creative industry. Hundreds of individuals and teams were interviewed, and Behance chronicled the work habits and best practices of creative leaders. </p>
+					<p>The paper products were initially designed by and for the Behance team as a way to stay organized. In 2007, at the insistence of friends who wanted Action Pads of their own...</p>
+				</div>
+			</div>
+			<div class="col-md-5 content-right content-right-top">
+				<h5 class="head">Popular</h5>	
+				<a href="single.html">
+				<div class="editor text-center">
+					<h3>DeltaMaker – The new kid on the block An Elegant 3D Printer</h3>
+					<p>A new cheap ass 3D Printer worth checking out</p>
+					<label>2 Days Ago</label>
+					<span></span>
+				</div>
+				</a>
+				<a href="single.html">
+				<div class="editor text-center">
+					<h3>DeltaMaker – The new kid on the block An Elegant 3D Printer</h3>
+					<p>A new cheap ass 3D Printer worth checking out</p>
+					<label>2 Days Ago</label>
+					<span></span>
+				</div>
+				</a>
+				<a href="single.html">
+				<div class="editor text-center">
+					<h3>Software Review: Autodesk Inventor Fusion for Mac</h3>
+					<p>3D Printing, 3D Software</p>
+					<label>3 Days Ago</label>
+					<span></span>
+				</div>
+				</a>
+			</div>	
+			<div class="clearfix"></div>			
+		</div>
+	</div>
+	<div class="footer">
+		<div class="footer-top">
+			<div class="container">
+				<div class="col-md-3 footer-links">
+					<h4>Other pages and things</h4>
+					<a href="#">Design a creative Blog</a>
+					<a href="#">Design a iPad Website</a>
+					<a href="#">Single Page sales portfolio </a>
+					<a href="#">Flat product website in Photoshop</a>
+					<a href="#">Design a creative Blog</a>
+					<a href="#">Design a iPad Website</a>
+					<a href="#">Single Page sales portfolio </a>
+					<a href="#">Flat product website</a>
+				</div>
+				<div class="col-md-3 footer-links span_66">
+					<a href="#">Flat product website in Photoshop</a>
+					<a href="#">Design a creative Blog</a>
+					<a href="#">Design a iPad Website </a>
+				</div>
+				<div class="col-md-3 footer-links">
+					<h4>Relevant Articles</h4>
+					<a href="#">Design a creative Blog</a>
+					<a href="#">Design a iPad Website</a>
+					<a href="#">Single Page sales portfolio </a>
+					<a href="#">Flat product website</a>
+					<a href="#">Design a creative Blog</a>
+				</div>
+				<div class="col-md-3 footer-links">
+					<h4>Other pages and things</h4>
+					<a href="#">Blaz Robar</a>
+					<a href="#">Nick Toranto</a>
+					<a href="#">Joisp Kelava</a>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+		<div class="footer-bottom">
+			<div class="container">
+				<div class="copyrights">
+					<p>Konstructs © 2015 All rights reserved | Template by  <a href="http://w3layouts.com">  W3layouts</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
